work/mkdocs/yaml/gitlab(1)/gitlab-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-boss-tls-gitlab
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - gitlab.rdev.tech
    secretName: boss-ingress-secret
  rules:
  - host: gitlab.rdev.tech
    http:
      paths:
      - path:
        backend:
          serviceName: gitlab
          servicePort: 80
